# cave

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Justfile  PLAN.md  README.md  main.py  pyproject.toml  release-please-config.json  renovate.json
.claude/: settings.json
.github/: renovate.json  settings.yml
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: docs.yml  lint.yml  pr-title.yml  release.yml  test.yml
docs/: api.rst  benchmark_results.rst  benchmarks.rst  builtin_plugins.rst  conf.py  config.rst  constraints_and_indices.rst  cookbook.rst  development.rst  dimensions.rst  extensions.rst  index.rst  indices_and_fks.rst  ledger_actions.rst  ledgers.rst  naming_conventions.rst  playground.rst  plugins.rst  setup.rst
docs/_templates/: versioning.html
playground/: .env.example  Justfile  alembic.ini  models.py  play_events.sql  postgrest.conf
playground/migrations/: env.py
playground/migrations/versions/: 9391943cc124_aol.py
scripts/: build_versioned_docs.py  generate_benchmark_docs.py  generate_dimension_docs.py  just_to_rst.mako  just_to_rst.py
scripts/docs/: build_versioned_docs.py  generate_benchmark_docs.py  generate_dimension_docs.py
scripts/examples/: append_only.py  append_only.sql  append_only_seed.sql  constraints_append_only.py  constraints_append_only_seed.sql  constraints_eav.py  constraints_eav_seed.sql  constraints_simple.py  constraints_simple_seed.sql  double_entry.py  double_entry.sql  double_entry_seed.sql  eav.py  eav.sql  eav_seed.sql  ledger.py  ledger.sql  ledger_event_action.py  ledger_event_action.sql  ledger_seed.sql  ledger_state_action.py  ledger_state_action.sql  simple.py  simple.sql  simple_seed.sql
src/cave/: __init__.py  check.py  cli.py  columns.py  config.py  declarative.py  errors.py  plugin.py  resource.py  validator.py
src/cave/alembic/: __init__.py  dependency.py  register.py  renderer.py  rewriter.py  schema.py
src/cave/factory/: __init__.py  base.py  context.py
src/cave/factory/dimension/: __init__.py  append_only.py  base.py  eav.py  simple.py  types.py  utils.py  validator.py
src/cave/factory/dimension/templates/: simple_delete.mako  (+3 more)
src/cave/models/: roles.py
src/cave/patches/: __init__.py  view_render.py
src/cave/patches/alembic_utils/: __init__.py  comparator.py
src/cave/plugins/: api.py  append_only.py  check.py  eav.py  pk.py  simple.py
src/cave/utils/: naming_convention.py  query.py  template.py  trigger.py
src/pgcraft/: __init__.py  check.py  cli.py  columns.py  computed.py  config.py  declarative.py  errors.py  extension.py  fk.py  index.py  plugin.py  statistics.py  validation.py  validator.py
src/pgcraft/alembic/: dependency.py  extension.py  register.py  renderer.py  rewriter.py  schema.py
src/pgcraft/extensions/: __init__.py  postgrest.py
src/pgcraft/extensions/postgrest/: __init__.py  plugin.py  trigger.py  view.py
src/pgcraft/factory/: __init__.py  base.py  context.py  ledger.py
src/pgcraft/factory/dimension/: __init__.py  append_only.py  eav.py  simple.py
src/pgcraft/ledger/: __init__.py  actions.py  events.py
src/pgcraft/models/: roles.py
src/pgcraft/patches/: __init__.py  view_render.py
src/pgcraft/plugins/: api.py  append_only.py  check.py  created_at.py  eav.py  entry_id.py  fk.py  index.py  ledger.py  ledger_actions.py  pk.py  protect.py  simple.py  statistics.py  trigger.py  view.py
src/pgcraft/runtime/: __init__.py  apply.py  builder.py  config.py  filter.py  generate.py  ledger.py  registry.py
src/pgcraft/sqlfluff/: __init__.py
src/pgcraft/utils/: naming.py  naming_convention.py  pgcraft_schema.py  sqlformat.py  trigger.py
src/pgcraft/views/: __init__.py  actions.py  api.py  balance.py  latest.py  view.py
tests/benchmarks/: conftest.py  test_append_only_bench.py  test_eav_bench.py  test_ledger_bench.py  test_simple_bench.py
tests/db/: alembic.ini  models.py
tests/db/migrations/: env.py
tests/db/migrations/versions/: 0001_initial.py
tests/integration/: conftest.py  test_postgrest_extension.py
tests/integration/factory/dimension/: test_eav_check.py  test_eav_nullable.py  test_protect.py  test_simple.py  test_simple_index_fk.py  test_uuidv7.py
tests/integration/factory/ledger/: test_ledger.py  test_ledger_event.py  test_ledger_event_action.py  test_ledger_state_action.py
tests/migrations/: conftest.py  test_migrations.py
tests/unit/: test_check.py  test_cli.py  test_columns.py  test_computed.py  test_declarative.py  test_extension.py  test_fk.py  test_index.py  test_postgrest_extension.py  test_statistics.py  test_validation.py
tests/unit/alembic/: test_dependency.py  test_register.py  test_renderer.py  test_rewriter.py  test_schema.py
tests/unit/factory/: test_factory_base.py
tests/unit/factory/dimension/: test_append_only.py  test_eav_factory.py  test_eav_mappings.py  test_simple.py  test_validator.py
tests/unit/ledger/: test_actions.py  test_events.py
tests/unit/models/: test_roles.py
tests/unit/patches/: test_view_render.py
tests/unit/plugins/: conftest.py  test_api_plugin.py  test_append_only_plugin.py  test_check_plugin.py  test_created_at_plugin.py  test_eav_plugin.py  test_entry_id_plugin.py  test_fk_plugin.py  test_index_plugin.py  test_ledger_plugin.py  test_pk_plugin.py  test_simple_plugin.py  test_statistics_plugin.py
tests/unit/runtime/: test_builder.py  test_config.py  test_filter.py
tests/unit/utils/: test_naming_convention.py  test_query.py  test_trigger.py
(+19 files in other folders)
