[project]	
name = "cave"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rodda John", email = "roddarjohn@protonmail.com" }
]
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.12.5",
    "typer>=0.24.1",
]

[project.scripts]
cave = "cave.cli:app"

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"


[dependency-groups]
dev = [
    "alembic>=1.18.4",
    "pytest>=8",
    "sqlalchemy>=2.0.48",
]

[tool.tox]
requires = ["tox-uv>=1"]
env_list = ["3.14"]

[tool.tox.env_run_base]
dependency_groups = ["dev"]
commands = [["pytest", "{posargs:}"]]
