[project]
name = "cave"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rodda John", email = "roddarjohn@protonmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.12.5",
    "typer>=0.24.1",
]

[project.scripts]
cave = "cave.cli:app"

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"


[dependency-groups]
dev = [
    "alembic>=1.18.4",
    "psycopg[binary]>=3.3.3",
    "pytest>=8",
    "pytest-alembic>=0.12.1",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.48",
    "tox>=4.49.1",
    "tox-uv>=1.33.2",
]
docs = [
    "furo>=2025.12.19 ; python_version >= '3.12'",
    "sphinx>=7.0 ; python_version >= '3.12'",
    "sphinx-autobuild>=2025.8.25 ; python_version >= '3.11'",
]
lint = [
    "ruff>=0.15.5",
    "ty>=0.0.20",
]

[tool.ruff]
exclude = ["docs", "playground", "tests/db/migrations"]


[tool.ruff.lint]
select = ["ALL"]
ignore = [
    # Conflicts with formatter
    "COM812",
    "ISC001",
    # Docstring convention (use D211 + D212)
    "D203",
    "D213",
    # Not applicable to this project
    "AIR",
    "DJ",
    "FAST",
    "NPY",
    "PD",
    "INT",
    "CPY",
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "S101",    # assert is fine in tests
    "ANN",     # no annotations required in tests
    "D",       # no docstrings required in tests
]

[tool.tox]
requires = ["tox-uv>=1"]
env_list = ["3.10", "3.11", "3.12", "3.13", "3.14"]

[tool.tox.env_run_base]
dependency_groups = ["dev"]
pass_env = ["DATABASE_URL"]
commands = [["pytest", "{posargs:}"]]
