[project]
name = "pgcraft"
version = "0.4.0"
description = "Configuration-driven PostgreSQL framework"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Rodda John", email = "roddarjohn@protonmail.com" }]
requires-python = ">=3.12"
classifiers = ["Development Status :: 2 - Pre-Alpha"]
dependencies = [
  "alembic>=1.18.4",
  "mako>=1.3.10",
  "pglast>=7.11",
  "sqlalchemy>=2.0.48",
  "sqlalchemy-declarative-extensions>=0.16.8",
  "sqlfluff>=3.3",
  "typer>=0.24.1",
]

[project.scripts]
pgcraft = "pgcraft.cli:app"

[project.entry-points.sqlfluff]
sqlfluff_templater_mako = "pgcraft.sqlfluff"

[build-system]
requires = ["uv_build>=0.10.8,<0.11.0"]
build-backend = "uv_build"


[dependency-groups]
dev = [
  "psycopg[binary]>=3.3.3",
  "pytest>=8",
  "pytest-alembic>=0.12.1",
  "python-dotenv>=1.2.2",
  "slipcover>=1.0.17",
  "tox>=4.49.1",
  "tox-uv>=1.33.2",
]
docs = [
  "myst-parser>=4.0",
  "sphinx>=7.0",
  "sphinx-autobuild>=2025.8.25",
  "sphinx-autodoc-typehints>=3.0.1",
  "sphinx-copybutton>=0.5.2",
]
lint = ["ruff>=0.15.5", "sqlfluff>=3.3", "ty>=0.0.20"]

[tool.ruff]
line-length = 80
exclude = ["docs", "playground", "tests/db/migrations"]


[tool.ruff.lint]
select = ["ALL"]
ignore = [
  # Conflicts with formatter
  "COM812",
  "ISC001",
  # Docstring convention (use D211 + D212)
  "D203",
  "D213",
  # Only enforce docstrings on public classes, functions, and methods
  "D100", # missing docstring in public module
  "D104", # missing docstring in public package
  # Not applicable to this project
  "AIR",
  "DJ",
  "FAST",
  "NPY",
  "PD",
  "INT",
  "CPY",
]

[tool.ruff.lint.per-file-ignores]
"scripts/**" = [
  "INP001",  # scripts/ doesn't need __init__.py
  "T201",    # print is fine in scripts
  "S603",    # subprocess calls use trusted, hardcoded commands
  "S607",    # partial paths (git, uv) are intentional
  "PLW1510", # check=False is intentional for fallible builds
]
"tests/**" = [
  "S101",    # assert is fine in tests
  "S608",    # f-string SQL in tests uses controlled schema names, not user input
  "S702",    # Mako templates in tests are not serving HTML
  "ANN",     # no annotations required in tests
  "D",       # no docstrings required in tests
  "PLR2004", # magic numbers are fine in test assertions
  "PLC0415", # local imports acceptable in test methods
  "RUF003",  # unicode × in comments is fine
  "RUF059",  # unpacked dummy variables are fine in tests
]
"**/migrations/versions/*.py" = [
  "INP001", # migration versions aren't a package
  "D400",   # migration docstrings don't need to end with a period
  "D415",   # migration docstrings don't need closing punctuation
  "W291",   # trailing whitespace on "Revises:" line when there's no parent
]

[tool.ty.environment]
extra-paths = ["tests/db"]

[tool.ty.analysis]
# pglast has no type stubs.
allowed-unresolved-imports = ["pglast.**", "sqlfluff.**"]

[tool.tox]
requires = ["tox-uv>=1"]
env_list = ["3.12", "3.13", "3.14"]

[tool.tox.env_run_base]
dependency_groups = ["dev"]
pass_env = ["DATABASE_URL"]
commands = [["pytest", "{posargs:}"]]
